Refatoring User Collection
