# src/router/user-router.ts
@@ -1,10 +1,10 @@
 import { Router } from 'express';
-import { returnBook, checkMembers, borrowBook } from '../controller/member-contoller';
+import { returnBook, checkMembers, borrowBook } from '../controller/user-contoller';
 
 const router = Router();
 
 router.post('/borrow', borrowBook);
 router.post('/return', returnBook);
-router.get('/members', checkMembers);
+router.get('/users', checkMembers);
 
 export default router;
